name:                cypher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wayofthepie/cypher#readme
license:             BSD3
license-file:        LICENSE
author:              Steohen O'Brien
maintainer:          wayofthepie@gmail.com
copyright:           Stephen O'Brien
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
    base >= 4.7 && < 5
    , containers
    , fmt
    , mtl
    , text >= 1.2.0.0 && < 1.3.0.0
  default-language:    Haskell2010

test-suite cypher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cypher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/cypher
